# vgi-barcode

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/barcode-wasm/: Cargo.toml
crates/barcode-wasm/src/: lib.rs
crates/barcode-worker/: Cargo.toml
crates/barcode-worker/examples/: gen_fixtures.rs
crates/barcode-worker/src/: arrow_io.rs  barcoding.rs  lib.rs  main.rs  meta.rs
crates/barcode-worker/src/scalar/: decode.rs  generate.rs  mod.rs  version.rs
crates/barcode-worker/src/table/: decode_barcodes.rs  formats.rs  mod.rs
crates/barcode-worker/tests/: roundtrip.rs
test/sql/: decode.test  generate.test  tables.test
wasm/: build.sh
