[workspace]
resolver = "2"
members = ["crates/barcode-worker", "crates/barcode-wasm"]
# barcode-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p barcode-wasm`.
default-members = ["crates/barcode-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-barcode"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves. 0.24 provides the wasm `vgi::wasm_worker!` macro
# used by barcode-wasm; requires rustc 1.97 (see rust-version above).
#
# Base (feature-less) so each target can opt in: the native build takes the SDK's
# real defaults (`sqlite` + `transport-http`), while the wasm build must NOT —
# tokio/mio/axum and bundled SQLite do not compile for wasm32, and the browser
# transport serves over a byte channel rather than HTTP. Features are additive,
# and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# Barcode / QR decode + encode: the maintained Rust port of ZXing. Provides
# multi-format decode (QR, EAN-8/13, UPC-A/E, Code128/39/93, ITF, Codabar,
# DataMatrix, PDF417, Aztec) and encode. Default features bring in the `image`
# crate + decoders/encoders + multi-barcode readers.
rxing = "=0.9.1"

# Image decode (BLOB in) / encode (PNG out for generators). Pinned to =0.25.8 to
# match rxing 0.9.1's exact `image` pin (so a single `image` resolves) and to
# keep MSRV at the workspace rust-version (1.86); 0.25.10 bumps MSRV past 1.86.
# Default features off; only the common web/photo raster formats enabled.
image = { version = "=0.25.8", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "webp",
] }

[profile.release]
opt-level = 2
